# dizpacho

./: Cargo.toml  README.md
src/: lib.rs
tests/: bare_self_is_renamed.rs  macrotest.rs
tests/expand/: bare_self_is_renamed.expanded.rs  bare_self_is_renamed.rs  iterator.expanded.rs  iterator.rs  ref_self.expanded.rs  ref_self.rs
