[package]
name = "dizpacho"
description = "Less boilerplate for implementing traits"
authors = [
    "Patrick White <1275985+packysauce@users.noreply.github.com>"
]
version = "0.1.0"
homepage = "https://crates.io/dizpacho"
repository = "https://github.com/packysauce/dizpacho"
edition = "2021"
readme = "README.md"
keywords = ["macro", "impl", "trait", "dispatch", "decorator"]
categories = ["rust-patterns"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "1.0.96", features = ["full", "extra-traits"] }

[dev-dependencies]
macrotest = "1.0.8"
